Make sure we use the same thread all the time (See bottom of: http://doc.akka.io/docs/akka/snapshot/scala/dispatchers.html)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 kafka-blocking-dispatcher {
   executor = "thread-pool-executor"
-  type = PinnedDispatcher
+  type = "PinnedDispatcher"
+  thread-pool-executor.allow-core-timeout = off
 }
